// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`module.svelte - svelte-verify > module.svelte 1`] = `
<script context="module">
    // I am top level comment in this file.
    import z from 'z';
    import threeLevelRelativePath from "../../../threeLevelRelativePath";
    import sameLevelRelativePath from "./sameLevelRelativePath";
    import thirdParty from "third-party";
    import oneLevelRelativePath from "../oneLevelRelativePath";
    import otherthing from "@core/otherthing";
    import abc from "@core/abc";
    import twoLevelRelativePath from "../../twoLevelRelativePath";
    import component from "@ui/hello";
    import fourLevelRelativePath from "../../../../fourLevelRelativePath";
    import something from "@server/something";
    import xyz from "@ui/xyz";
    import { defineComponent } from 'vue';
	import Header from './Header.svelte';
	import './styles.css';
</script>

<div class="app">
	<Header />

	<main>
		<slot />
	</main>

	<footer>
		<p>visit <a href="https://kit.svelte.dev">kit.svelte.dev</a> to learn SvelteKit</p>
	</footer>
</div>

<style>
	.app {
		display: flex;
		flex-direction: column;
		min-height: 100vh;
	}

	main {
		flex: 1;
		display: flex;
		flex-direction: column;
		padding: 1rem;
		width: 100%;
		max-width: 64rem;
		margin: 0 auto;
		box-sizing: border-box;
	}

	footer {
		display: flex;
		flex-direction: column;
		justify-content: center;
		align-items: center;
		padding: 12px;
	}

	footer a {
		font-weight: bold;
	}

	@media (min-width: 480px) {
		footer {
			padding: 12px 0;
		}
	}
</style>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<script context="module">
    // I am top level comment in this file.
    import thirdParty from "third-party";
    import { defineComponent } from "vue";
    import z from "z";

    import abc from "@core/abc";
    import otherthing from "@core/otherthing";

    import something from "@server/something";

    import component from "@ui/hello";
    import xyz from "@ui/xyz";

    import fourLevelRelativePath from "../../../../fourLevelRelativePath";
    import threeLevelRelativePath from "../../../threeLevelRelativePath";
    import twoLevelRelativePath from "../../twoLevelRelativePath";
    import oneLevelRelativePath from "../oneLevelRelativePath";
    import Header from "./Header.svelte";
    import sameLevelRelativePath from "./sameLevelRelativePath";

    import "./styles.css";
</script>

<div class="app">
    <Header />

    <main>
        <slot />
    </main>

    <footer>
        <p>
            visit <a href="https://kit.svelte.dev">kit.svelte.dev</a> to learn SvelteKit
        </p>
    </footer>
</div>

<style>
    .app {
        display: flex;
        flex-direction: column;
        min-height: 100vh;
    }

    main {
        flex: 1;
        display: flex;
        flex-direction: column;
        padding: 1rem;
        width: 100%;
        max-width: 64rem;
        margin: 0 auto;
        box-sizing: border-box;
    }

    footer {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        padding: 12px;
    }

    footer a {
        font-weight: bold;
    }

    @media (min-width: 480px) {
        footer {
            padding: 12px 0;
        }
    }
</style>

`;

exports[`questionable.svelte - svelte-verify > questionable.svelte 1`] = `
<script>
    // Who?
    const once = 'twice';

    // I am top level comment in this file.
    import z from 'z';
    import threeLevelRelativePath from "../../../threeLevelRelativePath";
    import sameLevelRelativePath from "./sameLevelRelativePath";
    import thirdParty from "third-party";

    // 😺
    $: cat = '😺';

    import oneLevelRelativePath from "../oneLevelRelativePath";
    import otherthing from "@core/otherthing";
    import abc from "@core/abc";
    import twoLevelRelativePath from "../../twoLevelRelativePath";
    import component from "@ui/hello";

    onMount(() => {
        console.log('hello');
    })

    import fourLevelRelativePath from "../../../../fourLevelRelativePath";
    import something from "@server/something";
    import xyz from "@ui/xyz";
    import { defineComponent } from 'vue';
	import Header from './Header.svelte';
	import './styles.css';
    import { onMount } from 'svelte';
</script>

<div class="app">
	<Header />

	<main>
		<slot />
	</main>

	<footer>
		<p>visit <a href="https://kit.svelte.dev">kit.svelte.dev</a> to learn SvelteKit</p>
	</footer>
</div>

<style>
	.app {
		display: flex;
		flex-direction: column;
		min-height: 100vh;
	}

	main {
		flex: 1;
		display: flex;
		flex-direction: column;
		padding: 1rem;
		width: 100%;
		max-width: 64rem;
		margin: 0 auto;
		box-sizing: border-box;
	}

	footer {
		display: flex;
		flex-direction: column;
		justify-content: center;
		align-items: center;
		padding: 12px;
	}

	footer a {
		font-weight: bold;
	}

	@media (min-width: 480px) {
		footer {
			padding: 12px 0;
		}
	}
</style>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<script>
    // I am top level comment in this file.
    import thirdParty from "third-party";
    import { defineComponent } from "vue";
    import z from "z";

    import abc from "@core/abc";
    import otherthing from "@core/otherthing";

    import something from "@server/something";

    import component from "@ui/hello";
    import xyz from "@ui/xyz";

    import fourLevelRelativePath from "../../../../fourLevelRelativePath";
    import threeLevelRelativePath from "../../../threeLevelRelativePath";
    import twoLevelRelativePath from "../../twoLevelRelativePath";
    import oneLevelRelativePath from "../oneLevelRelativePath";
    import Header from "./Header.svelte";
    import sameLevelRelativePath from "./sameLevelRelativePath";

    import "./styles.css";

    import { onMount } from "svelte";

    // Who?
    const once = "twice";

    // 😺
    $: cat = "😺";

    onMount(() => {
        console.log("hello");
    });
</script>

<div class="app">
    <Header />

    <main>
        <slot />
    </main>

    <footer>
        <p>
            visit <a href="https://kit.svelte.dev">kit.svelte.dev</a> to learn SvelteKit
        </p>
    </footer>
</div>

<style>
    .app {
        display: flex;
        flex-direction: column;
        min-height: 100vh;
    }

    main {
        flex: 1;
        display: flex;
        flex-direction: column;
        padding: 1rem;
        width: 100%;
        max-width: 64rem;
        margin: 0 auto;
        box-sizing: border-box;
    }

    footer {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        padding: 12px;
    }

    footer a {
        font-weight: bold;
    }

    @media (min-width: 480px) {
        footer {
            padding: 12px 0;
        }
    }
</style>

`;

exports[`simple.svelte - svelte-verify > simple.svelte 1`] = `
<script>
    // I am top level comment in this file.
    import z from 'z';
    import threeLevelRelativePath from "../../../threeLevelRelativePath";
    import sameLevelRelativePath from "./sameLevelRelativePath";
    import thirdParty from "third-party";
    import oneLevelRelativePath from "../oneLevelRelativePath";
    import otherthing from "@core/otherthing";
    import abc from "@core/abc";
    import twoLevelRelativePath from "../../twoLevelRelativePath";
    import component from "@ui/hello";
    import fourLevelRelativePath from "../../../../fourLevelRelativePath";
    import something from "@server/something";
    import xyz from "@ui/xyz";
    import { defineComponent } from 'vue';
	import Header from './Header.svelte';
	import './styles.css';
</script>

<div class="app">
	<Header />

	<main>
		<slot />
	</main>

	<footer>
		<p>visit <a href="https://kit.svelte.dev">kit.svelte.dev</a> to learn SvelteKit</p>
	</footer>
</div>

<style>
	.app {
		display: flex;
		flex-direction: column;
		min-height: 100vh;
	}

	main {
		flex: 1;
		display: flex;
		flex-direction: column;
		padding: 1rem;
		width: 100%;
		max-width: 64rem;
		margin: 0 auto;
		box-sizing: border-box;
	}

	footer {
		display: flex;
		flex-direction: column;
		justify-content: center;
		align-items: center;
		padding: 12px;
	}

	footer a {
		font-weight: bold;
	}

	@media (min-width: 480px) {
		footer {
			padding: 12px 0;
		}
	}
</style>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<script>
    // I am top level comment in this file.
    import thirdParty from "third-party";
    import { defineComponent } from "vue";
    import z from "z";

    import abc from "@core/abc";
    import otherthing from "@core/otherthing";

    import something from "@server/something";

    import component from "@ui/hello";
    import xyz from "@ui/xyz";

    import fourLevelRelativePath from "../../../../fourLevelRelativePath";
    import threeLevelRelativePath from "../../../threeLevelRelativePath";
    import twoLevelRelativePath from "../../twoLevelRelativePath";
    import oneLevelRelativePath from "../oneLevelRelativePath";
    import Header from "./Header.svelte";
    import sameLevelRelativePath from "./sameLevelRelativePath";

    import "./styles.css";
</script>

<div class="app">
    <Header />

    <main>
        <slot />
    </main>

    <footer>
        <p>
            visit <a href="https://kit.svelte.dev">kit.svelte.dev</a> to learn SvelteKit
        </p>
    </footer>
</div>

<style>
    .app {
        display: flex;
        flex-direction: column;
        min-height: 100vh;
    }

    main {
        flex: 1;
        display: flex;
        flex-direction: column;
        padding: 1rem;
        width: 100%;
        max-width: 64rem;
        margin: 0 auto;
        box-sizing: border-box;
    }

    footer {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        padding: 12px;
    }

    footer a {
        font-weight: bold;
    }

    @media (min-width: 480px) {
        footer {
            padding: 12px 0;
        }
    }
</style>

`;

exports[`typescript.svelte - svelte-verify > typescript.svelte 1`] = `
<script lang="ts">
    // Who?
    const once = 'twice';

    // I am top level comment in this file.
    import z from 'z';
    import threeLevelRelativePath from "../../../threeLevelRelativePath";

    type Person = {
        handsomness: number;
    }
    const person: Person = {
        handsomness: 10
    }

    import sameLevelRelativePath from "./sameLevelRelativePath";
    import thirdParty from "third-party";

    // 😺
    $: cat = '😺';

    import oneLevelRelativePath from "../oneLevelRelativePath";
    import otherthing from "@core/otherthing";
    import abc from "@core/abc";
    import twoLevelRelativePath from "../../twoLevelRelativePath";
    import component from "@ui/hello";

    onMount(() => {
        console.log('hello');
    })

    import fourLevelRelativePath from "../../../../fourLevelRelativePath";
    import something from "@server/something";
    import xyz from "@ui/xyz";
    import { defineComponent } from 'vue';
	import Header from './Header.svelte';
	import './styles.css';
    import { onMount } from 'svelte';
</script>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<script lang="ts">
    // I am top level comment in this file.
    import thirdParty from "third-party";
    import { defineComponent } from "vue";
    import z from "z";

    import abc from "@core/abc";
    import otherthing from "@core/otherthing";

    import something from "@server/something";

    import component from "@ui/hello";
    import xyz from "@ui/xyz";

    import fourLevelRelativePath from "../../../../fourLevelRelativePath";
    import threeLevelRelativePath from "../../../threeLevelRelativePath";
    import twoLevelRelativePath from "../../twoLevelRelativePath";
    import oneLevelRelativePath from "../oneLevelRelativePath";
    import Header from "./Header.svelte";
    import sameLevelRelativePath from "./sameLevelRelativePath";

    import "./styles.css";

    import { onMount } from "svelte";

    // Who?
    const once = "twice";

    type Person = {
        handsomness: number;
    };
    const person: Person = {
        handsomness: 10,
    };

    // 😺
    $: cat = "😺";

    onMount(() => {
        console.log("hello");
    });
</script>

`;
